# proximal-internal

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  go.mod  go.sum
api/endpoint/v1/: BUILD.bazel  endpoint.proto
api/logs/v1/: BUILD.bazel
api/middleware/v1/: BUILD.bazel
api/proxy/v1/: BUILD.bazel  proxy.proto
cmd/server/: BUILD.bazel  envoy-bootstrap.yaml  main.go
core/envoy/: run.go
core/log/: logger.go
core/server/: server.go
server/api/: BUILD.bazel  endpoint.go  proxy.go
server/db/sql/: BUILD.bazel  endpoints.sql  proxies.sql  schema.sql
server/db/sql/migrations/: 00004_endpoints.up.sql  00005_proxies.down.sql  00005_proxies.up.sql  BUILD.bazel
server/envoy/: BUILD.bazel  envoy.go  run.go
