load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

# gazelle:resolve proto proto google/api/annotations.proto @googleapis//google/api:annotations_proto
# gazelle:resolve proto go google/api/annotations.proto  @org_golang_google_genproto_googleapis_api//annotations

proto_library(
    name = "proxyv1_proto",
    srcs = ["proxy.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//api/endpoint/v1:endpointsv1_proto",
        "@com_google_protobuf//:empty_proto",
        "@com_google_protobuf//:timestamp_proto",
        "@googleapis//google/api:annotations_proto",
    ],
)

go_proto_library(
    name = "proxyv1_go_proto",
    compilers = [
        "@io_bazel_rules_go//proto:go_grpc",
        "@com_github_grpc_ecosystem_grpc_gateway_v2//protoc-gen-grpc-gateway:go_gen_grpc_gateway",  # keep
    ],
    importpath = "github.com/apoxy-dev/proximal/api/proxy/v1",
    proto = ":proxyv1_proto",
    visibility = ["//visibility:public"],
    deps = [
        "//api/endpoint/v1:endpoint",
        "@org_golang_google_genproto_googleapis_api//annotations",
    ],
)

go_library(
    name = "proxy",
    embed = [":proxyv1_go_proto"],
    importpath = "github.com/apoxy-dev/proximal/api/proxy/v1",
    visibility = ["//visibility:public"],
)
